--- a/index.html
+++ b/index.html
@@ -342,7 +342,11 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+    emailjs.init("i5fE1QEsFXa1ymcAa"); // Ganti dengan Public Key Anda
+</script>
+<script src="script.js"></script>
         
 </body>
 </html>
