--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
     emailjs.init("i5fE1QEsFXa1ymcAa"); // Ganti dengan Public Key Anda
 </script>
