--- a/index.html
+++ b/index.html
@@ -7,27 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Mono&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        dark: '#121212',
-                        darker: '#0a0a0a',
-                        accent: '#64ffda',
-                        gray: {
-                            750: '#2d2d2d',
-                            850: '#1a1a1a',
-                        }
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        mono: ['Space Mono', 'monospace'],
-                    },
-                }
-            }
-        }
-    </script>
+    <script src="tailwind.config.js"></script>
 </head>
 <body class="min-h-screen">
     <!-- Navigation -->
@@ -149,7 +129,7 @@
                                 </div>
                             </div>
                             <p class="text-gray-400 mb-4">Turn Designs into Code with Style
-                                A Flutter-based app that simplifies UI slicing for developers. Clean, fast, and efficient — perfect for converting designs into reusable components with precision and ease.</p>
+                                A Flutter-based app that simplifies UI slicing for developers. Clean, fast, and efficient perfect for converting designs into reusable components with precision and ease.</p>
                             <div class="flex flex-wrap gap-2">
                                 <span class="text-xs px-2 py-1 bg-gray-750 rounded-full text-accent">HTML</span>
                                 <span class="text-xs px-2 py-1 bg-gray-750 rounded-full text-accent">Dart</span>
@@ -165,7 +145,7 @@
                         </div>
                         <div class="p-6">
                             <div class="flex justify-between items-center mb-3">
-                                <h3 class="text-xl font-bold">Project SliceCraft</h3>
+                                <h3 class="text-xl font-bold">Project Dynamic UI</h3>
                                 <div class="flex space-x-3">
                                     <a href="https://github.com/rafirst/Flutter_Slicing" aria-label="GitHub repository" class="text-gray-400 hover:text-accent">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
@@ -173,8 +153,7 @@
                                     
                                 </div>
                             </div>
-                            <p class="text-gray-400 mb-4">Turn Designs into Code with Style
-                                A Flutter-based app that simplifies UI slicing for developers. Clean, fast, and efficient — perfect for converting designs into reusable components with precision and ease.</p>
+                            <p class="text-gray-400 mb-4">In this UI slicing project, I developed a user interface using Flutter with a primary focus on responsiveness. The goal was to create a visually optimal and consistent experience across various screen sizes and devices. I leveraged Flutter's flexible layout features to ensure the UI adapts seamlessly on phones, tablets, and even desktops.</p>
                             <div class="flex flex-wrap gap-2">
                                 <span class="text-xs px-2 py-1 bg-gray-750 rounded-full text-accent">HTML</span>
                                 <span class="text-xs px-2 py-1 bg-gray-750 rounded-full text-accent">Dart</span>
@@ -360,7 +339,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
-    emailjs.init("i5fE1QEsFXa1ymcAa"); // Ganti dengan Public Key Anda
+    emailjs.init("i5fE1QEsFXa1ymcAa");
 </script>
 <script src="script.js"></script>
         
