--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#about" class="nav-link text-gray-300 hover:text-accent transition-colors ">About</a>
                 <a href="#projects" class="nav-link text-gray-300 hover:text-accent transition-colors">Projects</a>
                 <a href="#journey" class="nav-link text-gray-300 hover:text-accent transition-colors">Journey</a>
+                <a href="#skills" class="nav-link text-gray-300 hover:text-accent transition-colors">Skills</a>
                 <a href="#contact" class="nav-link text-gray-300 hover:text-accent transition-colors">Contact</a>
             </div>
             
@@ -35,6 +36,7 @@
                 <a href="#about" class="text-gray-300 hover:text-accent transition-colors">About</a>
                 <a href="#projects" class="text-gray-300 hover:text-accent transition-colors">Projects</a>
                 <a href="#journey" class="text-gray-300 hover:text-accent transition-colors">Journey</a>
+                <a href="#skills" class="text-gray-300 hover:text-accent transition-colors">Skills</a>
                 <a href="#contact" class="text-gray-300 hover:text-accent transition-colors">Contact</a>
             </div>
         </div>
@@ -259,6 +261,49 @@
             </div>
         </section>
 
+        <!-- Skills Section -->
+        <section id="skills" class="py-20 px-6 bg-dark">
+            <div class="container mx-auto">
+                <h2 class="section-title text-3xl font-bold mb-16">Skills</h2>
+
+                <div class="grid md:grid-cols-3 gap-8">
+                    <!-- Soft Skills -->
+                    <div class="bg-gray-850 p-6 rounded-lg shadow-lg">
+                        <h3 class="text-xl font-bold mb-4">Soft Skills</h3>
+                        <ul class="list-disc pl-5 text-gray-400">
+                            <li>Teamwork & Collaboration</li>
+                            <li>Adaptability</li>
+                            <li>Time Management</li>
+                            <li>Open-minded & Willing to Learn</li>
+                        </ul>
+                    </div>
+
+                    <!-- Hard Skills -->
+                    <div class="bg-gray-850 p-6 rounded-lg shadow-lg">
+                        <h3 class="text-xl font-bold mb-4">Hard Skills</h3>
+                        <ul class="list-disc pl-5 text-gray-400">
+                            <li>Laravel</li>
+                            <li>PHP</li>
+                            <li>Flutter</li>
+                            <li>Dart</li>
+                            <li>HTML & CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+
+                    <!-- Tools -->
+                    <div class="bg-gray-850 p-6 rounded-lg shadow-lg"> 
+                        <h3 class="text-xl font-bold mb-4">Tools</h3>
+                        <ul class="list-disc pl-5 text-gray-400">
+                            <li>Visual Studio Code</li>
+                            <li>GitHub</li>
+                            <li>Figma</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact" class="py-20 px-6 bg-dark">
             <div class="container mx-auto max-w-4xl">
@@ -268,6 +313,12 @@
                         I’m always excited to connect with like-minded individuals and explore new opportunities. 
                         Whether you have a project in mind, a question, or just want to say hello, feel free to reach out. 
                         Let’s create something amazing together!
+                    </p>
+                    <p class="text-gray-400 mt-4">
+                        <strong>Email:</strong> <a href="mailto:mohammadrafiabdillah@gmail.com" class="text-accent hover:underline">mohammadrafiabdillah@gmail.com</a>
+                    </p>
+                    <p class="text-gray-400 mt-2">
+                        <strong>WhatsApp:</strong> <a href="https://wa.me/6285266539656" class="text-accent hover:underline">+62 852 6653 9656</a>
                     </p>
                 </div>
                 
