--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <!-- Timeline Item 1 -->
                     <div class="timeline-item relative pb-12">
                         <div class="mb-2 flex items-center">
-                            <span class="text-accent font-mono mr-4">2020 - 2024</span>
+                            <span class="text-accent font-mono mr-6">2020 - 2024</span> <!-- Adjusted spacing -->
                         </div>
                         <h3 class="text-xl font-bold mb-2">High School</h3>
                         <h4 class="text-gray-400 mb-3">Boarding School in East Java</h4>
@@ -221,7 +221,7 @@
                     <!-- Timeline Item 2 -->
                     <div class="timeline-item relative pb-12">
                         <div class="mb-2">
-                            <span class="text-accent font-mono">2024 - Present</span>
+                            <span class="text-accent font-mono mr-6">2024 - Present</span> <!-- Adjusted spacing -->
                         </div>
                         <h3 class="text-xl font-bold mb-2">Student of Bachelor</h3>
                         <h4 class="text-gray-400 mb-3">Politechnic IDN Bogor</h4>
@@ -236,7 +236,7 @@
                     <!-- Timeline Item 3 -->
                     <div class="timeline-item relative pb-12">
                         <div class="mb-2">
-                            <span class="text-accent font-mono">April - Mei 2025</span>
+                            <span class="text-accent font-mono mr-6">April - Mei 2025</span> <!-- Adjusted spacing -->
                         </div>
                         <h3 class="text-xl font-bold mb-2">Daily Worker ( Operations Division )</h3>
                         <h4 class="text-gray-400 mb-3">PT. Shopee Internasional Indonesia</h4>
